<resources>
    <string name="app_name">MangBeli</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notification</string>
    <string name="title_maps">Maps</string>
    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>
    <string name="move_to_item_detail">move to item detail</string>
    <string name="searchbar_hint">Search Vendor..</string>
    <string name="title_home_vendor_around">Vendors Around You</string>
    <string name="description_logo">Cart Logo</string>
    <string name="sort_by">Sort By</string>
    <string name="set_sort_by">set sort by</string>
    <string name="title_login">Login</string>
    <string name="description_login">Welcome to MangBeli, please log in</string>
    <string name="email">Email</string>
    <string name="input">Input</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="or">Find Your Nearby Vendors</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="profile">Profile</string>
    <string name="suka">Favorite</string>
    <string name="location_profile">Location</string>
    <string name="email_hint">Email</string>
    <string name="no_hp_hint">Phone</string>
    <string name="list_favorite_hint">Favorite foods</string>
    <string name="reset_btn">Reset</string>
    <string name="save_btn">Save</string>
    <string name="list_of_favorit_user">List of favorite, Bakso, Ketoprak, Mie Ayam, Nasi Goreng</string>
    <string name="desc_notification">Set notification for nearest street vendor</string>
    <string name="title_dark_mode">Dark Mode</string>
    <string name="desc_dark_mode">Set theme to dark mode</string>
    <string name="title_languanges">Languages</string>
    <string name="desc_languange">Set your language</string>
    <string name="logout">Logout</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="action_bar_maps">Vendor Locations</string>
    <string name="title_signup">REGISTER</string>
    <string name="description_signup">Welcome to MangBeli</string>
    <string name="name">Name</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="pembeli">Buyer</string>
    <string name="pedagang">Vendor</string>
    <string name="description1">Welcome to MangBeli, the app that makes it easy for you to find and interact with street vendors around you.</string>
    <string name="description2">Choose your role in MangBeli: a buyer who wants to enjoy delicious food or a street vendor who wants to reach more customers.</string>
    <string name="description3">Let\'s start with MangBeli! Register now to enjoy various features, from tracking street vendors to notifications when your favorite vendors are nearby. </string>
    <string name="description4">Welcome to MangBeli, where the experience of buying becomes easier and more enjoyable. Here you can find street vendors around you.</string>
    <string name="next_btn">Next > </string>
    <string name="menu">Menu > </string>
    <string name="skip">Skip ></string>
    <string name="back">Back</string>
    <string name="menu_screen_image">menu image</string>
    <string name="register">Register</string>
    <string name="onboarding_screen_image">onboarding image</string>
    <string name="vendor_name">Vendor Name</string>
    <string name="detail_pedagang">Vendor Details</string>
    <string name="cta_fab_desc">Click to call the vendor</string>
    <string name="title_alert_detail">Call Vendor</string>
    <string name="desc_alert_detail">Are you sure you want to call the vendor to your location?</string>
    <string name="toast_alert_detail">Vendor has been notified, please wait a moment!</string>
    <string name="toast_alert_detail_cancel">You decided not to call the vendor</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="name_is_required">Name is required</string>
    <string name="email_is_required">Email is required</string>
    <string name="password_is_required">Password is required</string>
    <string name="success">Success</string>
    <string name="success_account_created">User Created</string>
    <string name="positive_dialog_btn_text">Continue</string>
    <string name="error">Error</string>
    <string name="sign_up_error">Try Again</string>
    <string name="vendor_location_format">%s, %s</string>
    <string name="tes_aja">Test only</string>
    <string name="title_home_buyer_around">Is there a purchase in your location?</string>
    <string name="title_home_mark_buyer">(Mark purchase)</string>
    <string name="ya">Yes</string>
    <string name="confirpassword_is_required">Password must match</string>
    <string name="minimal_8_characters">minimum 8 characters</string>
    <string name="email_example">example@gmail.com</string>
    <string name="invalid_format">Invalid Format</string>
    <string name="dont_have_account">Don\'t Have Account? </string>
    <string name="name_hint">Name</string>
    <string name="name_vendor">Vendor Name</string>
    <string name="list_vendor">List Vendor</string>
    <string name="btn_cancel">Cancal</string>
    <string name="price_range">Price range</string>
    <string name="enable_location">Enable Location</string>
    <string name="choose_your_role">Choose Your Role</string>
    <string name="description_pembeli">Buyer</string>
    <string name="start">START</string>
    <string name="get_started">GET STARTED</string>
    <string name="already_have_account">I ALREADY HAVE ACCOUNT</string>
    <string name="add_fav_food">What Your Favorite Food?</string>
    <string name="fill_your_personal_data">Fill Your Personal Data</string>
    <string name="bubur">Bubur</string>
    <string name="image_food">image Food</string>
    <string name="list_product_hint">List Product</string>
    <string name="minimum_price">Minimum Price : </string>
    <string name="maksimum_price">Maksimum Price : </string>
    <string name="minimum_sapi">Minimum Price : </string>
    <string name="maksimum">Maksimum Price : </string>
    <string name="email_not_registered">Email Not Registered</string>
    <string name="wrong_password">Wrong Password</string>
    <string name="name_product_hint">Name Product</string>
    <string name="whatsapp_login">Login With Whatsapp</string>
    <string name="retry">Retry</string>
    <string name="api_key">AIzaSyCJGXpV0zpsGLJxDF3IeSL77yy6Sl12zKs</string>
    <string name="pref_key_location">key_location</string>
    <string name="slider">slider</string>
    <string name="image_of_vendor">image of vendor</string>
    <string name="click_to_call_vendors">click to call vendors</string>
    <string name="enable_location_title">Enable Location</string>
    <string name="enable_location_message">Location feature is disabled. Do you want to enable it?</string>
    <string name="enable_location_positive_button">Yes</string>
    <string name="enable_location_negative_button">No</string>
    <string name="location_not_available">Location not available, please try again</string>
    <string name="location_permission_denied">Location permission denied</string>
    <string name="role_hint">Role</string>
    <string name="title_home_pembeli_around">Buyers near you</string>
    <string name="action_bar_maps_pedagang">Buyer Location</string>
    <string name="detail_pembei">Detail Buyer</string>
    <string name="predict_arrival_time">Predict Arrival Time :</string>
    <string name="route">Route</string>
    <string name="data_berhasil_disimpan">"data saved successfully "</string>
    <string name="product1_product2_product3">product1, product2, product3</string>
    <string name="description_vendor">Vendor</string>
</resources>