<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/selector_home_icon"
        android:title="@string/title_home"
        android:enabled="true"/>

    <item
        android:id="@+id/navigation_maps"
        android:icon="@drawable/selector_maps_icon"
        android:title="@string/title_maps"
        android:enabled="true" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/selector_profile_icon"
        android:title="@string/title_profile"
        android:enabled="true" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/selector_setting_icon"
        android:title="@string/title_settings"
        />

</menu>