<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/profile_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:text="@string/fill_your_personal_data"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/roleTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp">

        <EditText
            android:id="@+id/roleEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints="Role"
            android:hint="@string/role_hint"
            android:inputType="text"
            tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edl_no_hp"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/no_hp_hint"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_no_hp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/favTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp">

        <EditText
            android:id="@+id/favEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints="Name"
            android:hint="@string/list_favorite_hint"
            android:inputType="text"
            tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/start_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/black"
        android:text="@string/start"
        android:textColor="@color/white" />


</LinearLayout>